Refactor code structure and output